fixtures/type_errors/bad_tuple_element_1.tl
pair : (Int, Bool) { (1, 2) }
---
Error:

fixtures/type_errors/bad_tuple_element_1.tl:
   1: pair : (Int, Bool) { (1, 2) }
                               ^
                                expected this to have the type Bool but it actually has the type Int
